Implementando configurações base
- Implementando filtro de exceções (Erros)
- Adicionando camada de configurações
- Iniciando implementação de autenticação/autorização

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /WorkHub.Exceptions/obj
 /WorkHub.Infrastructure/bin
 /WorkHub.Infrastructure/obj
+/WorkHub.CrossCutting/bin
+/WorkHub.CrossCutting/obj
