--- a/WorkHub.Api/WorkHub.Api.csproj
+++ b/WorkHub.Api/WorkHub.Api.csproj
@@ -10,12 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\WorkHub.Application\WorkHub.Application.csproj" />
+    <ProjectReference Include="..\WorkHub.CrossCutting\WorkHub.CrossCutting.csproj" />
+    <ProjectReference Include="..\WorkHub.Exceptions\WorkHub.Exceptions.csproj" />
   </ItemGroup>
 
 </Project>
