--- a/WorkHub.Application/WorkHub.Application.csproj
+++ b/WorkHub.Application/WorkHub.Application.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.14" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.7.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WorkHub.Domain\WorkHub.Domain.csproj" />
+    <ProjectReference Include="..\WorkHub.Exceptions\WorkHub.Exceptions.csproj" />
+  </ItemGroup>
+
 </Project>
