Configurando Migrations / Conectando com banco de dados

--- a/WorkHub.Api/appsettings.json
+++ b/WorkHub.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "ConnectionString": "Server=localhost;Database=WorkHubDb;Trusted_Connection=True;TrustServerCertificate=True;",
+  "PrivateKey": "5+IV)E2glD3xCH2rNTElZ_at9(TbG1N(E=pH)29*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
