--- a/WorkHub.CrossCutting/WorkHub.CrossCutting.csproj
+++ b/WorkHub.CrossCutting/WorkHub.CrossCutting.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WorkHub.Application\WorkHub.Application.csproj" />
+    <ProjectReference Include="..\WorkHub.Infrastructure\WorkHub.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
