--- a/WorkHub.Api/appsettings.Development.json
+++ b/WorkHub.Api/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=localhost;Database=WorkHubDb;Trusted_Connection=True;TrustServerCertificate=True;",
   "PrivateKey": "5+IV)E2glD3xCH2rNTElZ_at9(TbG1N(E=pH)29*",
   "Logging": {
     "LogLevel": {
