Adicionando endpoints POST para criação dos dados
- Adicionando FluentValidation e seu validators
- Criando endpoints de criação dos dados
- Adicionando tratamentos de exceptions persionalizados
- Criando repositórios de acesso ao banco de dados
- Implementando repositorio base para todas as tabelas

--- a/WorkHub.Exceptions/WorkHub.Exceptions.csproj
+++ b/WorkHub.Exceptions/WorkHub.Exceptions.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Update="ResourceDatabaseErrorMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ResourceDatabaseErrorMessages.resx</DependentUpon>
+    </Compile>
     <Compile Update="ResourceErrorMessages.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -15,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="ResourceDatabaseErrorMessages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>ResourceDatabaseErrorMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="ResourceErrorMessages.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ResourceErrorMessages.Designer.cs</LastGenOutput>
