Ajustando strings de conexão para o ambiente

--- a/WorkHub.Api/appsettings.json
+++ b/WorkHub.Api/appsettings.json
@@ -1,11 +1,12 @@
 {
-  "ConnectionString": "Server=localhost;Database=WorkHubDb;Trusted_Connection=True;TrustServerCertificate=True;",
+  "ConnectionStrings": {
+    "Connection": "Server=192.168.1.71;Database=WorkHubDb;User Id=sa;Password=Controltech!@#133;TrustServerCertificate=True;"
+  },
   "PrivateKey": "5+IV)E2glD3xCH2rNTElZ_at9(TbG1N(E=pH)29*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
